versions/v2.14/modules/en/pages/rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc
= Configure Amazon Cognito
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2026-05-12
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/authentication-config/configure-amazon-cognito.adoc 
:product-path: rancher-admin/users/authn-and-authz/configure-amazon-cognito.adoc
:description: Create an Amazon Cognito user pool and configure Rancher to work with Amazon Cognito. Your users can then sign into Rancher using their login from Amazon Cognito.

If your organization uses Amazon Cognito for user authentication, you can configure Rancher to allow login using Amazon Cognito credentials. The following instructions describe how to configure Rancher to work with Amazon Cognito:

[#_prerequisites]
== Prerequisites

* In Rancher:
** Amazon Cognito is disabled.
+
[NOTE]
====
Consult the Amazon Cognito https://aws.amazon.com/cognito/getting-started/[documentation] to configure the user pool.
====

* In Amazon Cognito:
** Create a new user pool or use an existing one. 
** In the `App client` settings, set the redirect URL to `+https://yourRancherHostURL/verify-auth+`. Replace `yourRancherHostURL` with the actual hostname of your Rancher instance (e.g., `+https://rancher.example.com/verify-auth+`).

## Configuring Amazon Cognito in Rancher

. In the upper left corner of the Rancher UI, click **☰ > Users & Authentication**.
. In the left navigation bar, click **Auth Provider**.
. Select **Amazon Cognito**.
. Complete the **Configure an Amazon Cognito account** form. For help with filling the form, see the xref:#_configuration_reference[configuration reference].
. Click **Enable**.
+
Rancher redirects you to the Amazon Cognito login page. Enter your Amazon Cognito credentials to validate your Rancher configuration.
+
[NOTE]
====
You may need to disable your popup blocker to see the Amazon Cognito login page.
====

**Result:** Rancher is configured to work with your Amazon Cognito using the OIDC protocol. Your users can now sign into Rancher using their Amazon Cognito logins.

[NOTE]
====
User and group search is not supported for Amazon Cognito. When assigning permissions to a Project or Cluster, you must manually enter the UserID generated by Cognito if the user has not yet logged in to Rancher. However, if the user has previously logged in, you can assign permissions using their username or email address.
====

[#_configuration_reference]
== Configuration Reference

|===
| Field | Description

| Client ID
| The Client ID of your Amazon Cognito App Client.

| Client Secret
| The generated Secret of your Amazon Cognito App Client.

| Issuer
| The Issuer URL of your Amazon Cognito App Client. It follows the format `+https://cognito-idp.{region}.amazonaws.com/{userPoolId}+`, and can be found in the App Client settings page. Rancher uses the Issuer URL to fetch all the required URLs.
|===

[#_oidc_support_for_pkce_extension]
== OIDC Support for PKCE Extension

include::shared:ROOT:partial$en/oidc-pkce-support.adoc[]

[#_configuring_oidc_single_logout_slo]
== Configuring OIDC Single Logout (SLO)

include::shared:ROOT:partial$en/configure-slo-oidc.adoc[]

[#_troubleshooting]
== Troubleshooting

[#_you_are_not_redirected_to_your_authentication_provider]
=== You are not redirected to your authentication provider

If you fill out the **Configure an Amazon Cognito account** form and click on **Enable**, and you are not redirected to Amazon Cognito, verify your Amazon Cognito configuration.
